# stapi-fastapi-tle-provider

./: README.md  pyproject.toml
scripts/: bootstrap  server
stapi_fastapi_tle/: __main__.py  app.py
stapi_fastapi_tle/infrastructure/: satellite.py  settings.py
stapi_fastapi_tle/service/: app.py  conftest.py  product.py  router.py  router_test.py
