[tool.poetry]
name = "stapi-fastapi-tle"
version = "0.0.0"
description = "STAPI-FastAPI TLE provider"
authors = ["Christian Wygoda <christian.wygoda@satellitevu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
stapi-fastapi = {git = "https://github.com/stapi-spec/stapi-fastapi.git#v0.0.0+240926-073941" }
tle-sat = "^0.5.0"
pydantic-settings = "^2.5.2"
fastapi = "^0.115.0"

[tool.poetry.group.standard]
optional = true

[tool.poetry.group.standard.dependencies]
uvicorn = "^0.30.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-coverage = "^0.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E501", "UP007", "UP034"]
select = [
    "C9",
    "E",
    "F",
    "I",
    "W",
    "UP"
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Cover"
omit = [
    "**/*_test.py",
    "**/conftest.py",
    "stapi_fastapi/__dev__.py",
]

[tool.pytest.ini_options]
addopts="--cov=stapi_fastapi_tle"
filterwarnings = [
]
